# simple-gtest

./: CMakeLists.txt  LICENSE  README.md  simple-gtest.cpp
